file(GLOB_RECURSE X_TOOLS_COMMOM_SOURCE_H "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE X_TOOLS_COMMOM_SOURCE_UI "${CMAKE_CURRENT_SOURCE_DIR}/*.ui")
file(GLOB_RECURSE X_TOOLS_COMMOM_SOURCE_CPP "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

set(ALL_SOURCE "")
list(APPEND ALL_SOURCE ${X_TOOLS_COMMOM_SOURCE_H})
list(APPEND ALL_SOURCE ${X_TOOLS_COMMOM_SOURCE_UI})
list(APPEND ALL_SOURCE ${X_TOOLS_COMMOM_SOURCE_CPP})

if(NOT X_TOOLS_ENABLE_MODULE_BLUETOOTH)
  message(
    STATUS "Bluetooth module is not imported, source files related to Bluetooth will be removed.")
  set(TMP_DIR ${CMAKE_CURRENT_SOURCE_DIR})
  list(REMOVE_ITEM ALL_SOURCE ${TMP_DIR}/Common/xToolsBleScanner.h)
  list(REMOVE_ITEM ALL_SOURCE ${TMP_DIR}/Common/xToolsBleScanner.cpp)
  list(REMOVE_ITEM ALL_SOURCE ${TMP_DIR}/CommonUI/xToolsBleDeviceInfoComboBox.h)
  list(REMOVE_ITEM ALL_SOURCE ${TMP_DIR}/CommonUI/xToolsBleDeviceInfoComboBox.cpp)
endif()

add_library(xToolsCommon STATIC ${ALL_SOURCE} ${CMAKE_CURRENT_SOURCE_DIR}/xToolsCommon.qrc)
if(X_TOOLS_ENABLE_MODULE_GLOG)
  target_link_libraries(xToolsCommon PRIVATE glog::glog)
endif()
target_link_libraries(xToolsCommon PRIVATE Qt${QT_VERSION_MAJOR}::Core)
target_link_libraries(xToolsCommon PRIVATE Qt${QT_VERSION_MAJOR}::Gui)
target_link_libraries(xToolsCommon PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
target_link_libraries(xToolsCommon PRIVATE Qt${QT_VERSION_MAJOR}::Network)
if(X_TOOLS_ENABLE_MODULE_SERIALBUS)
  target_link_libraries(xToolsCommon PRIVATE Qt${QT_VERSION_MAJOR}::SerialBus)
endif()
if(X_TOOLS_ENABLE_MODULE_SERIALPORT)
  target_link_libraries(xToolsCommon PRIVATE Qt${QT_VERSION_MAJOR}::SerialPort)
endif()
if(X_TOOLS_ENABLE_MODULE_BLUETOOTH)
  target_link_libraries(xToolsCommon PRIVATE Qt${QT_VERSION_MAJOR}::Bluetooth)
endif()
if(X_TOOLS_ENABLE_MODULE_PRIVATE)
  target_link_libraries(xToolsCommon PRIVATE QtAES::QtAES)
endif()

x_tools_generate_translations(xToolsCommon)
