file(GLOB_RECURSE SAK_MODBUSSTUDIO_SOURCES_H "${CMAKE_SOURCE_DIR}/Source/ModbusStudio/*.h")
file(GLOB_RECURSE SAK_MODBUSSTUDIO_SOURCES_UI "${CMAKE_SOURCE_DIR}/Source/ModbusStudio/*.ui")
file(GLOB_RECURSE SAK_MODBUSSTUDIO_SOURCES_CPP "${CMAKE_SOURCE_DIR}/Source/ModbusStudio/*.cpp")

list(APPEND SAK_MODBUSSTUDIO_SOURCES ${SAK_MODBUSSTUDIO_SOURCES_H})
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${SAK_MODBUSSTUDIO_SOURCES_UI})
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${SAK_MODBUSSTUDIO_SOURCES_CPP})
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/Common/xToolsSettings.h)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/Common/xToolsSettings.cpp)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/Common/xToolsInterface.h)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/Common/xToolsInterface.cpp)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/Common/xToolsTranslator.h)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/Common/xToolsTranslator.cpp)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/CommonUI/xToolsUi.h)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/CommonUI/xToolsMainWindow.h)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/Source/Common/CommonUI/xToolsMainWindow.cpp)
list(APPEND SAK_MODBUSSTUDIO_SOURCES ${CMAKE_SOURCE_DIR}/xTools.qrc)

x_tools_add_executable("ModbusStudio" ${SAK_MODBUSSTUDIO_SOURCES})
x_tools_set_target_properties(ModbusStudio)
x_tools_deploy_qt(ModbusStudio)

target_link_libraries(ModbusStudio PRIVATE glog::glog)
target_link_libraries(ModbusStudio PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
target_link_libraries(ModbusStudio PRIVATE Qt${QT_VERSION_MAJOR}::Network)
target_link_libraries(ModbusStudio PRIVATE Qt${QT_VERSION_MAJOR}::SerialBus)
target_link_libraries(ModbusStudio PRIVATE Qt${QT_VERSION_MAJOR}::SerialPort)
