file(GLOB_RECURSE COMMON_FILES "${CMAKE_SOURCE_DIR}/Source/Common/*.*")
file(GLOB_RECURSE APP_FILES "${CMAKE_SOURCE_DIR}/Source/App/*.*")

macro(x_tools_add_tool_app dir_name app_name)
  string(TOUPPER ${app_name} upper_app_name)
  option(X_TOOLS_ENABLE_TARGET_${upper_app_name} "" ON)
  if(X_TOOLS_ENABLE_TARGET_${upper_app_name})
    set(ASSISTANT_ROOT_DIR ${CMAKE_SOURCE_DIR}/Source/Tools/${dir_name})
    file(GLOB_RECURSE TOOL_SOURCES_H "${ASSISTANT_ROOT_DIR}/*.h")
    file(GLOB_RECURSE TOOL_SOURCES_UI "${ASSISTANT_ROOT_DIR}/*.ui")
    file(GLOB_RECURSE TOOL_SOURCES_CPP "${ASSISTANT_ROOT_DIR}/*.cpp")
    file(GLOB_RECURSE TOOL_SOURCES_QRC "${ASSISTANT_ROOT_DIR}/*.qrc")
    list(APPEND TOOL_SOURCES ${TOOL_SOURCES_H})
    list(APPEND TOOL_SOURCES ${TOOL_SOURCES_UI})
    list(APPEND TOOL_SOURCES ${TOOL_SOURCES_CPP})
    list(APPEND TOOL_SOURCES ${TOOL_SOURCES_QRC})
    list(APPEND TOOL_SOURCES ${TOOL_OWN_SOURCE})
    list(APPEND TOOL_SOURCES ${COMMON_FILES} ${APP_FILES})
    list(APPEND TOOL_SOURCES ${CMAKE_SOURCE_DIR}/xTools.qrc)
    if(WIN32)
      list(APPEND TOOL_SOURCES ${CMAKE_SOURCE_DIR}/xTools.rc)
    endif()

    add_compile_definitions(ACSS_STATIC)
    x_tools_add_executable(${app_name} ${TOOL_SOURCES})
    if(X_TOOLS_ENABLE_MODULE_STYLESHEET)
      x_tools_setup_stylesheet(${app_name})
    endif()

    x_tools_set_target_properties(${app_name})
    x_tools_deploy_qt(${app_name})
    target_link_libraries(${app_name} PRIVATE glog::glog Qt${QT_VERSION_MAJOR}::Svg
                                              ${ASSISTANT_OWN_LIBS})
  endif()
endmacro()

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/CRC")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/mDNS")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Ping")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ASCII")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Base64")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Number")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/String")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/QRCode")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Broadcast")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/FileCheck")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/FileMerge")

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Modbus")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/CANBus")
