macro(add_tool dir_name app_name)
  string(TOUPPER ${app_name} upper_app_name)
  option(X_TOOLS_ENABLE_TARGET_${upper_app_name} "" ON)
  if(X_TOOLS_ENABLE_TARGET_${upper_app_name})
    set(TOOL_SOURCES ${CMAKE_SOURCE_DIR}/Source/Tools/${dir_name}/main.cpp)
    if(WIN32)
      list(APPEND TOOL_SOURCES ${CMAKE_SOURCE_DIR}/xTools.rc)
    endif()

    x_tools_add_executable(${app_name} ${TOOL_SOURCES})
    x_tools_deploy_qt(${app_name})
    target_link_libraries(${app_name} PRIVATE xToolsCore)
  endif()
endmacro()

add_tool("ASCII" "ASCIIAssistant")
add_tool("Base64" "Base64Assistant")
add_tool("Broadcast" "BroadcastAssistant")
add_tool("CANBus" "CANBusAssistant")
add_tool("CRC" "CRCAssistant")
add_tool("FileCheck" "FileCheckAssistant")
add_tool("FileMerge" "FileMergeAssistant")
add_tool("mDNS" "mDNSAssistant")
add_tool("Modbus" "ModbusAssistant")
add_tool("Number" "NumberAssistant")
add_tool("Ping" "PingAssistant")
add_tool("QRCode" "QRCodeAssistant")
add_tool("String" "StringAssistant")
